dataset1235/2025-2/805158916/users/566502422/executions/2651470117_2667036473.log
== SUBMISSION (2025-08-25 14:21:00)
-- CODE: 
Celsius = float(input("digite o numero"))
Kelvin = Celsius + 273.15
print(round(Kelvin,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
digite o numero293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
digite o numero263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
digite o numero233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
digite o numero373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
digite o numero273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
digite o numero303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:18:59)
-- CODE: 
Celsius = int(input("digite o numero"))
Kelvin = Celsius + 273.15
print(round(Kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.25'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-10.0'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-40.0'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '30.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:20:53)
-- CODE: 
Celsius = float(input("digite o numero"))
Kelvin = Celsius + 273.15
print(round(Kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
digite o numero293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
digite o numero263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
digite o numero233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
digite o numero373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
digite o numero273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
digite o numero303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:18:53)
-- CODE: 
Celsius = int(input("digite o numero"))
Kelvin = Celsius + 273.15
print(round(Kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.25'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-10.0'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-40.0'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '30.5'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:19:43)
-- CODE: 
Celsius = (input("digite o numero"))
Kelvin = Celsius + 273.15
print(round(Kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:20:06)
-- CODE: 
Celsius = input("digite o numero")
Kelvin = Celsius + 273.15
print(round(Kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Kelvin = Celsius + 273.15
             ~~~~~~~~^~~~~~~~
TypeError: can only concatenate str (not "float") to str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:18:32)
-- CODE: 
Celsius = int(input("digite o numero"))
Kelvin = Celsius + 273.15
print(round(Kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.25'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-10.0'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-40.0'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '30.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:20:26)
-- CODE: 
Celsius = int(input("digite o numero"))
Kelvin = Celsius + 273.15
print(round(Kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '20.25'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-10.0'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '-40.0'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '100.0'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '0.0'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Celsius = int(input("digite o numero"))
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: invalid literal for int() with base 10: '30.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:18:21)
-- CODE: 
Celsius = int(input("digite o numero"))
Kelvin = Celsius + 273.15
print(round(Kelvin,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    print(round(Kelvin,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    print(round(Kelvin,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    print(round(Kelvin,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    print(round(Kelvin,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    print(round(Kelvin,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    print(round(Kelvin,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
